[package]
name = "img2vp9"
version = "0.1.0"
authors = ["ninthakeey <ninthakeey@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vpx-encode = {path="./vpx-encode", features=["vp9"]}
serde = {version="1", features=["derive"]}
anyhow = "1"
image = "0.23.12"
num_cpus = "1.13"
